--- a/modlist.html
+++ b/modlist.html
@@ -17,6 +17,7 @@
 <li><a href="https://minecraft.curseforge.com/mc-mods/351860">Bloomful (by bageldotjpg)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/308653">Bedspreads (by TheIllusiveC4)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/362393">Atmospheric (by paradiscal)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/383725">Enhanced Mushrooms (by Ep1c312)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/358241">Stupid Horse Stand Still (by Lothrazar)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/222789">Sound Filters (by Tmtravlr)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/284007">Inspirations (by KnightMiner)</a></li>
@@ -27,38 +28,41 @@
 <li><a href="https://minecraft.curseforge.com/mc-mods/299540">FastFurnace (by Shadows_of_Fire)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/291509">The Endergetic Expansion (by endergized)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/232795">Mounted Pearl - Bring your mount along when you enderpearl (by Lothrazar)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/328085">Create (by simibubi)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/241665">Psi (by Vazkii)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/310087">Unmending (by Vazkii)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/357178">MixinBootstrap (by LX_Gaming)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/347488">Valhelsia Structures (by Khytwel)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/347488">Valhelsia Structures (by ValhelsiaTeam)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/306770">Patchouli (by Vazkii)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/74924">Mantle (by mDiyo)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/355248">Save My Stronghold! (by YUNGNICKYOUNG)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/239197">CraftTweaker (by Jaredlll08)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/349447">Ensorcellation (by TeamCoFH)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/340583">YUNG's Better Caves (by YUNGNICKYOUNG)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/238372">Neat (by Vazkii)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/368293">Repurposed Structures (Forge) (by telepathicgrunt)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/225643">Botania (by Vazkii)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/272190">"To the Bat Poles!" (by EnderLanky)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/267769">Traverse: Legacy Continued (by ProspectorDev)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/268324">Blur (by tterrag1098)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/69162">CoFH Core (by TeamCoFH)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/243121">Quark (by Vazkii)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/355589">Berry Good (by minecraftabnormals)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/353928">Botany Pots (by DarkhaxDev)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/319582">Respawnable Pets (by MoriyaShiine)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/362528">Decorative Blocks (by stohun)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/383029">Covalent (by svenhjol)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/308240">Cherished Worlds (by TheIllusiveC4)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/353399">Archer's Paradox (by TeamCoFH)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/301051">Quark Oddities (by Vazkii)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/250363">AutoRegLib (by Vazkii)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/382216">Abnormals Core (by SmellyModder)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/361718">Incubation (by Markus1002)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/293856">Crafting Automat (by Loldoggy)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/382216">Abnormals Core (by SmellyModder)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/365045">Autumnity (by Markus1002)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/293856">Crafting Automat (by Loldoggy)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/268373">Simply Tea! (by EpicSquid319)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/309927">Curios API (by TheIllusiveC4)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/288885">FastWorkbench (by Shadows_of_Fire)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/367268">Delicate and Dainty (by cosmicparticl)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/251767">Waddles (by Girafi)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/288885">FastWorkbench (by Shadows_of_Fire)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/244844">ForgeEndertech (by EnderLanky)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/60089">Mouse Tweaks (by YaLTeR)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/318255">Phosphor (Forge) (by jellysquid_)</a></li>
